--- a/code/06-graphblas/NB06-graphblas.ipynb
+++ b/code/06-graphblas/NB06-graphblas.ipynb
@@ -1748,7 +1748,10 @@
     "\n",
     "The HPEC GraphBLAS BoF on 20 Sep 2022 has a talk from John Gilbert on \"What did the GraphBLAS get wrong?\"\n",
     "- [slides](https://docs.google.com/presentation/d/1Py8s_6XZo7USTN79K_m-Ls4XpABo0sblFZgKJ3FPoIg/edit#slide=id.p)\n",
-    "- [wider survey responses](https://docs.google.com/document/d/1fMmm-Bmew0wpgJRrjyMHy6G-zPq6R6kQlRum560_4S0/edit)\n"
+    "- [wider survey responses](https://docs.google.com/document/d/1fMmm-Bmew0wpgJRrjyMHy6G-zPq6R6kQlRum560_4S0/edit)\n",
+    "\n",
+    "And another:  If you want to print types like `GrB_Index`, there are no macro helpers.  So in C you need casts to be safe, *e.g.* `printf(\"GrB_Index: %lu\\n\", (unsigned long) idx);`.\n",
+    "\n"
    ]
   }
  ],
