Updated NB04 to fix some typos

--- a/code/04-saxpy-workflow/NB04-saxpy-workflow.ipynb
+++ b/code/04-saxpy-workflow/NB04-saxpy-workflow.ipynb
@@ -358,7 +358,7 @@
      "output_type": "stream",
      "text": [
       "Makefile\n",
-      "NB03-saxpy-workflow.pdf\n",
+      "NB04-saxpy-workflow.html\n",
       "NB04-saxpy-workflow.ipynb\n",
       "saxpy-1d-workflow.c\n",
       "saxpy-1d-workflow.cdc\n",
@@ -412,9 +412,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "real\t0m0.024s\n",
+      "real\t0m0.022s\n",
       "user\t0m0.013s\n",
-      "sys\t0m0.007s\n"
+      "sys\t0m0.006s\n"
      ]
     }
    ],
@@ -451,8 +451,8 @@
      "text": [
       "\n",
       "real\t0m0.020s\n",
-      "user\t0m0.008s\n",
-      "sys\t0m0.010s\n"
+      "user\t0m0.011s\n",
+      "sys\t0m0.008s\n"
      ]
     }
    ],
@@ -480,7 +480,18 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "emu-cc -o saxpy-1d-workflow.mwx $FLAGS saxpy-1d-workflow.c -lemu_c_utils"
@@ -497,10 +508,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 21:38:52 2022\n",
+      "Start untimed simulation with local date and time= Tue Sep 27 12:23:11 2022\n",
       "\n",
       "SAXPY complete!\n",
-      "End untimed simulation with local date and time= Wed Sep 21 21:38:52 2022\n",
+      "End untimed simulation with local date and time= Tue Sep 27 12:23:11 2022\n",
       "\n"
      ]
     },
@@ -538,10 +549,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 21:38:53 2022\n",
+      "Start untimed simulation with local date and time= Tue Sep 27 12:23:11 2022\n",
       "\n",
       "SAXPY complete!\n",
-      "End untimed simulation with local date and time= Wed Sep 21 21:38:53 2022\n",
+      "End untimed simulation with local date and time= Tue Sep 27 12:23:11 2022\n",
       "\n"
      ]
     },
@@ -594,10 +605,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submitted batch job 134217827 on cluster pathfinder\n",
+      "Submitted batch job 134217841 on cluster pathfinder\n",
       "\n",
       "Showing Slurm output files:\n",
-      "slurm-134217827.out\n",
+      "slurm-134217841.out\n",
       "\n",
       "Output from the run:\n",
       "SAXPY complete!\n"
@@ -656,7 +667,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submitted batch job 134217828 on cluster pathfinder\n",
+      "Submitted batch job 134217842 on cluster pathfinder\n",
       "\n",
       "Output from the run:\n",
       "SAXPY complete!\n"
@@ -772,22 +783,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Debugging Strategy for the Pathfinder\n",
+    "## Debugging and Optimization Strategy for the Pathfinder\n",
     "\n",
     "If you've made it this far, you likely have some idea of the key steps for compiling and running programs with the Pathfinder. You might notice that there are several steps to compiling and running for the Pathfinder - this is because it is a novel parallel architecture that is constantly evolving!  \n",
     "\n",
-    "However, in general there are three phases for running large applications at scale on the Pathfinder: 1) x86 testing for functional correctness and traditional Cilk-based timing information, 2) Lucata emusim testing for functional correctness, 3) Single-node and multi-node testing for timing results.\n",
+    "However, in general there are three phases for running large applications at scale on the Pathfinder: 1) x86 testing for functional correctness and traditional Cilk-based timing information, 2) Lucata emusim testing for functional correctness, 3) Single-node and multi-node testing for timing results. The following steps break down this workflow into more detail and can be used as a reference for your development with the Pathfinder platform.  \n",
+    "\n",
+    "\n",
+    "#### x86 Testing\n",
     "\n",
     "1) Compile on x86 (using memoryweb_x86.h)  \n",
     "2) Run on x86 with a single thread (CILK_NWORKERS = 1)  \n",
-    "3) Run on x86 multi-threaded  (CILK_NWORKERS > 1)\n",
+    "3) Run on x86 multi-threaded  (CILK_NWORKERS > 1)  \n",
+    "\n",
+    "#### Lucata simulation\n",
     "4) Compile for Lucata Cilk  \n",
     "5) Simulate  with emusim in untimed mode (--ignore_starttiming)  \n",
     "6) Simulate  on emusim with randomly initialized memory (--initialize_memory)  \n",
     "7) Simulate with emusim in timed mode. (starttiming() in code)  \n",
+    "\n",
+    "#### Pathfinder execution\n",
     "8) Execute on single-node HW  \n",
     "9) Execute on multi-node HW  \n",
-    "10) Increase input size gradually. Always use the smallest input set that will finish/recreate the problem in a reasonable amount of time!"
+    "10) Increase input size gradually. Always use the smallest input set that will finish/recreate the problem in a reasonable amount of time!  \n",
+    "\n",
+    "#### Pathfinder optimization\n",
+    "11) Use the new hardware performance counters to help find areas for optimization.  "
    ]
   },
   {
