--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -33,8 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your notebook code folder is at: /nethome/jyoung9/tutorials/lucata-pathfinder-tutorial/code\n",
+      "Your notebook code folder is at: /nethome/mnguyen383/lucata-pathfinder-tutorial/code\n",
       "\n",
-      "Execution path is at: /tools/emu/pathfinder-sw/22.09-beta/bin:/nethome/jyoung9/.cargo/bin:/opt/slurm/current/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/nethome/jyoung9/.local/bin:/nethome/jyoung9/bin\n",
+      "Execution path is at: /tools/emu/pathfinder-sw/22.09-beta/bin:/tools/emu/pathfinder-sw/22.09-beta/bin:/nethome/mnguyen383/bin:/nethome/mnguyen383/.local/bin:/opt/slurm/current/bin:/opt/verilator/bin:/opt/riscv-gnu-toolchain/bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\n",
       "\n",
       "Lucata compilation flags are '-I/tools/emu/pathfinder-sw/22.09-beta/include/ -L/tools/emu/pathfinder-sw/22.09-beta/lib -lmemoryweb'\n",
       "\n",
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -207,6 +209,16 @@
      "output_type": "stream",
      "text": [
       "hello-world-naive.mwx\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n"
      ]
     }
    ],
@@ -218,18 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 20:57:02 2022\n",
+      "Start untimed simulation with local date and time= Thu Nov 17 12:37:34 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Wed Sep 21 20:57:06 2022\n",
+      "End untimed simulation with local date and time= Thu Nov 17 12:37:37 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -316,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -325,6 +337,16 @@
      "text": [
       "hello-world.mwx\n",
       "hello-world-naive.mwx\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n"
      ]
     }
    ],
@@ -336,18 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 20:57:08 2022\n",
+      "Start untimed simulation with local date and time= Thu Nov 17 12:38:27 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Wed Sep 21 20:57:12 2022\n",
+      "End untimed simulation with local date and time= Thu Nov 17 12:38:31 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -424,25 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 20:57:15 2022\n",
+      "Start untimed simulation with local date and time= Thu Nov 17 12:41:13 2022\n",
       "\n",
-      "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Wed Sep 21 20:57:39 2022\n",
+      "End untimed simulation with local date and time= Thu Nov 17 12:41:13 2022\n",
       "\n",
-      "\n",
-      "Info: /OSCI/SystemC: Simulation stopped by user.\n",
       "hello-world-spawn.c\n",
       "hello-world-spawn.cdc\n",
-      "hello-world-spawn.hpc\n",
-      "hello-world-spawn.mps\n",
       "hello-world-spawn.mwx\n"
      ]
     },
@@ -450,6 +467,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /usr/lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
       "\n",
       "        SystemC 2.3.3-Accellera --- Sep  7 2022 09:15:59\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
@@ -478,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -521,11 +542,11 @@
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
-      "Emu system run time 0.000661 sec==661164000 ps\n",
+      "Emu system run time 0.000656 sec==655608000 ps\n",
       "System thread counts:\n",
       "\tactive=0, created=14, died=14,\n",
-      "\tmax live=3 first occurred @58180848 ps with prog 8.8% complete\n",
-      "\tand last occurred @58180848 ps with prog 12.7% complete\n",
+      "\tmax live=3 first occurred @58314168 ps with prog 8.89% complete\n",
+      "\tand last occurred @58314168 ps with prog 12.8% complete\n",
       "************************************************\n",
       "************************************************\n",
       "Simulator wall clock time (seconds): 24\n"
@@ -548,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -566,17 +587,17 @@
       "> Number of Nodes=4\n",
       "> Total Memory (in MiB)=64\n",
       "16c16\n",
-      "< Emu system run time 0.0006 sec==600048000 ps\n",
+      "< Emu system run time 0.000606 sec==605604000 ps\n",
       "---\n",
-      "> Emu system run time 0.000661 sec==661164000 ps\n",
+      "> Emu system run time 0.000656 sec==655608000 ps\n",
       "18,20c18,20\n",
       "< \tactive=0, created=0, died=0,\n",
       "< \tmax live=0 first occurred @0 s with prog 0% complete\n",
       "< \tand last occurred @0 s with prog 0% complete\n",
       "---\n",
       "> \tactive=0, created=14, died=14,\n",
-      "> \tmax live=3 first occurred @58180848 ps with prog 8.8% complete\n",
-      "> \tand last occurred @58180848 ps with prog 12.7% complete\n",
+      "> \tmax live=3 first occurred @58314168 ps with prog 8.89% complete\n",
+      "> \tand last occurred @58314168 ps with prog 12.8% complete\n",
       "23c23\n",
       "< Simulator wall clock time (seconds): 4\n",
       "---\n",
@@ -599,11 +620,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -f *.mwx *.tqd *.cdc *.vsf *.mps *.uis *.csv *.hpc; \\\r\n",
+      "./helpers/backup_imgs.sh\r\n"
+     ]
+    }
+   ],
    "source": [
-    "#!make clean"
+    "!make clean"
    ]
   },
   {
